--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.4.0",
     "next": "15.1.6",
     "react": "^19.0.0",
