--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@ant-design/icons": "^5.6.1",
         "@ant-design/v5-patch-for-react-19": "^1.0.3",
         "@goongmaps/goong-js": "^1.0.9",
         "antd": "^5.24.0",
@@ -18,6 +19,7 @@
         "emailjs-com": "^3.2.0",
         "firebase": "^11.4.0",
         "next": "15.1.6",
+        "openai": "^4.86.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.1",
