--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@google/generative-ai": "^0.24.0",
         "axios": "^1.8.1",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.7",
@@ -21,6 +22,7 @@
         "mongo-sanitize": "^1.1.0",
         "mongoose": "^8.10.0",
         "mongoose-delete": "^1.0.2",
+        "openai": "^4.86.2",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "socket.io": "^4.8.1"
