--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "dayjs": "^1.11.13",
         "emailjs-com": "^3.2.0",
         "firebase": "^11.4.0",
+        "framer-motion": "^12.6.2",
         "next": "15.1.6",
         "openai": "^4.86.2",
         "react": "^19.0.0",
