--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,22 @@
         "@ant-design/icons": "^5.6.1",
         "@ant-design/v5-patch-for-react-19": "^1.0.3",
         "@goongmaps/goong-js": "^1.0.9",
+        "@tinymce/tinymce-react": "^6.1.0",
         "antd": "^5.24.0",
         "axios": "^1.7.9",
+        "chart.js": "^4.4.8",
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
+        "dompurify": "^3.2.5",
         "emailjs-com": "^3.2.0",
         "firebase": "^11.4.0",
         "framer-motion": "^12.6.2",
         "next": "15.1.6",
         "openai": "^4.86.2",
         "react": "^19.0.0",
+        "react-chartjs-2": "^5.3.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.55.0",
         "react-hot-toast": "^2.5.1",
         "react-icons": "^5.4.0",
         "socket.io-client": "^4.8.1",
