--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
         "@ant-design/icons": "^5.6.1",
         "@ant-design/v5-patch-for-react-19": "^1.0.3",
         "@goongmaps/goong-js": "^1.0.9",
+        "@goongmaps/goong-map-react": "^1.1.2",
+        "@goongmaps/goong-sdk": "^1.0.7",
+        "@mapbox/polyline": "^1.2.1",
         "@tinymce/tinymce-react": "^6.1.0",
         "antd": "^5.24.0",
         "axios": "^1.7.9",
