--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "google-auth-library": "^9.15.1",
         "jsonwebtoken": "^9.0.2",
         "moment-timezone": "^0.5.47",
         "mongo-sanitize": "^1.1.0",
