--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "mongo-sanitize": "^1.1.0",
         "mongoose": "^8.10.0",
         "mongoose-delete": "^1.0.2",
+        "nodemailer": "^7.0.3",
         "openai": "^4.86.2",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
